--- a/doctor-mangle-data/doctor-mangle.csproj
+++ b/doctor-mangle-data/doctor-mangle.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="interfaces\" />
     <Folder Include="services\builders\" />
   </ItemGroup>
 
