--- a/doctor-mangle-design-patterns/doctor-mangle-design-patterns.csproj
+++ b/doctor-mangle-design-patterns/doctor-mangle-design-patterns.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\doctor-mangle-data\doctor-mangle.csproj" />
   </ItemGroup>
 
