--- a/doctor-mangle.test/doctor-mangle.test.csproj
+++ b/doctor-mangle.test/doctor-mangle.test.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>doctor_mangle.test</RootNamespace>
 
     <IsPackable>false</IsPackable>
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\doctor-mangle-data\doctor-mangle.csproj" />
+    <ProjectReference Include="..\doctor-mangle\doctor-mangle.csproj" />
   </ItemGroup>
 
 </Project>
